--- a/QMAcupoint/Base.lproj/Main.storyboard
+++ b/QMAcupoint/Base.lproj/Main.storyboard
@@ -287,27 +287,30 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="an4-H5-gFe">
-                                        <rect key="frame" x="8" y="8" width="42" height="21"/>
+                                        <rect key="frame" x="8" y="8" width="584" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rCa-Xf-Zi5">
-                                        <rect key="frame" x="8" y="37" width="584" height="584"/>
+                                        <rect key="frame" x="8" y="36.5" width="584" height="584"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="584" id="YmO-xS-fRr"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JhE-0l-z9C">
-                                        <rect key="frame" x="8" y="649" width="584" height="584"/>
+                                        <rect key="frame" x="8" y="648.5" width="584" height="584"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="584" id="IS6-K5-WVU"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="an4-H5-gFe" firstAttribute="leading" secondItem="ryT-e2-eyd" secondAttribute="leading" constant="8" id="6En-tK-Pwu"/>
                                     <constraint firstItem="an4-H5-gFe" firstAttribute="top" secondItem="ryT-e2-eyd" secondAttribute="topMargin" id="7f8-Nd-oFJ"/>
+                                    <constraint firstItem="an4-H5-gFe" firstAttribute="top" secondItem="ryT-e2-eyd" secondAttribute="top" constant="8" id="AJK-qr-VE6"/>
                                     <constraint firstItem="JhE-0l-z9C" firstAttribute="top" secondItem="rCa-Xf-Zi5" secondAttribute="bottom" constant="28" id="GQZ-Cf-a2F"/>
+                                    <constraint firstAttribute="trailing" secondItem="an4-H5-gFe" secondAttribute="trailing" constant="8" id="HIS-9j-FvW"/>
                                     <constraint firstItem="an4-H5-gFe" firstAttribute="leading" secondItem="ryT-e2-eyd" secondAttribute="leadingMargin" id="WBS-Jd-sJC"/>
                                     <constraint firstItem="rCa-Xf-Zi5" firstAttribute="top" secondItem="an4-H5-gFe" secondAttribute="bottom" constant="8" symbolic="YES" id="YoM-mu-yWX"/>
                                     <constraint firstItem="rCa-Xf-Zi5" firstAttribute="trailing" secondItem="ryT-e2-eyd" secondAttribute="trailingMargin" id="bb3-wq-MnY"/>
